--- a/recursive.htm
+++ b/recursive.htm
@@ -453,7 +453,7 @@ if (localStorage.view) viewById=JSON.parse(localStorage.view);
 
 if (!window.tree){
   tree=testtree;
-  localStorage.tree = JSON.stringify(tree)
+  localStorage.tree = JSON.stringify(tree,null,2);
   delete localStorage.view;
 }
 
@@ -463,6 +463,17 @@ window.onstorage=(e)=>{
     reloadAll()
   }
 }
+
+async function loadTree() {
+  let fileData = await fetch('./tree.json');
+  let jsonData = await fileData.json();
+  lastStorage = localStorage.tree;
+  localStorage.tree = JSON.stringify(jsonData.tree,null,2);
+  if (lastStorage != localStorage.tree) {
+    location.reload();
+  }
+}
+loadTree();
 
 function openHelp(){
   help.style.display='block'
@@ -1722,11 +1733,11 @@ function populateActivity(){
 }
 function save(){
   populateActivity()
-  localStorage.tree=JSON.stringify(tree)
+  localStorage.tree=JSON.stringify(tree,null,2);
 }
 function saveView(){
   viewById[level.id]=view
-  localStorage.view=JSON.stringify(viewById)
+  localStorage.view=JSON.stringify(viewById,null,2);
 }
 function deltaPush(actions){
   if (readonly) return;
@@ -2085,7 +2096,7 @@ function setPenTool(newTool){
   else document.oncontextmenu=null;
 }
 function downloadJson(){
-  let blob = new Blob([JSON.stringify({tree,view:viewById})], {type: "application/json"})
+  let blob = new Blob([JSON.stringify({tree,view:viewById},null,2)], {type: "application/json"})
   let url = URL.createObjectURL(blob)
   let a = document.createElement('a')
   a.href=url
